# duck-mid-f103

./: CMakeLists.txt  prj.conf
boards/: duck_mid.overlay
docs/: can_protocol.md  gimbal_pyr_jacobian_plan.md  gimbal_world_attitude_control.md  pcan_gimbal_tool.md  pcan_motor_tool.md  uart_protocol.md  测试记录.md  电机代码位置.md
scripts/: gimbal_pyr_3d_sim.html  pcan_gimbal_tool.py  pcan_motor_tool.py
scripts/__pycache__/: pcan_gimbal_tool.cpython-314.pyc.2320980129200
scripts/jlink/: erase.jlink  flash.jlink  jlink.cfg
src/: can_command.c  can_command.h  can_protocol.c  can_protocol.h  debug_shell.c  gimbal.c  gimbal.h  led.c  led.h  main.c  motor.c  motor.h  uart_command.c  uart_command.h  uart_protocol.c  uart_protocol.h
src/led/: led.c  led.h
src/motor/: motor.c  motor.h
